portfolio aparecido celso 02012024 0.01

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             src: url('https://fonts.cdnfonts.com/s/117023/Futury-Light.woff');
         }
         body {
-            background-color: #1a1a40;
+            background-color: #06062d;
             color: white;
             font-family: 'Futury Light', sans-serif;
         }
