--- a/index.html
+++ b/index.html
@@ -31,19 +31,17 @@
             background-color: #0088cc;
         }
         .project-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         .project-image {
-            flex: 1;
-            max-width: 450px;
+            max-width: 100%;
             height: auto;
-            margin-right: 20px;
             border: 2px solid white;
         }
-        .project-details {
-            flex: 3;
+        @media (max-width: 768px) {
+            .project-details {
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
