--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
             }
         }
     </style>
+	<style>
+    .project-image {
+        width: 100%;
+        max-width: 100%; /* Garantir que não exceda o container */
+        height: auto; /* Proporção automática */
+    }
+
+    @media (min-width: 768px) {
+        .project-image {
+            width: 30%;
+        }
+    }
+</style>
 </head>
 <body>
     <header class="text-center py-5">
